# agent_research

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
backend/app/: agents.py  citations.py  config.py  llm.py  main.py  models.py  orchestrator.py  progress.py  research_state.py  skills.py  tool_calling.py  tools.py
docs/: Memory、Context Engineering、Reflection 机制PLAN.md  PLAN.md  开发指南.md  自主工具调用PLAN.md  通用 Agent 工具调用与外部 Skill 系统PLAN.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  styles.css
frontend/tests/: App.test.ts
skills/research-task-summarizer/: SKILL.md
skills/research-task-summarizer/agents/: openai.yaml
tests/backend/: test_agents.py  test_citations.py  test_health.py  test_llm_provider.py  test_models.py  test_orchestrator.py  test_research_state.py  test_research_stream.py  test_research_stream_validation.py  test_skills.py  test_tool_calling.py  test_tools.py
